# PythonEksamen

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: foodlog.csv  requirements.txt
backend/app/: app.py  main.py
backend/app/models/: Meal.py
backend/tests/: test_app.py
frontend/: .env  .env.example  Dockerfile  app.py  foodlog.csv  requirements.txt
frontend/components/: Recipes.py  Recipes2.py  bar_chart.py  donut_chart.py  recipes.py
frontend/pages/: About.py  about.py  contact.py  dashboard.py  weekly_update.py
frontend/services/: api_client.py  food_api.py
frontend/sider/: About.py  Contact.py  Weekly_update.py  about.py  contact.py  weekly_update.py
frontend/styles/: colors.py  main.css
