[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "project-tools"
version = "0.1.0"
requires-python = ">=3.12"
description = "Dev tools for testing and linting"
dependencies = [
    "matplotlib>=3.10.9",
]


[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
